[package]
name = "waymark-observability-setup"
version.workspace = true
edition = "2024"

[features]
default = ["trace"]

trace = ["dep:tracing-subscriber", "dep:tracing-chrome"]
tokio-console = ["dep:console-subscriber"]

[dependencies]
console-subscriber = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
