[package]
name = "waymark-proto"
version.workspace = true
edition = "2024"

[package.metadata.cargo-shear]
ignored = ["prost", "serde"]

[dependencies]
prost = "0.12"
prost-types = "0.12"
tonic = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"

[features]
default = ["client", "server", "serde"]

client = ["tonic/transport"]
server = ["tonic/transport"]
serde = ["dep:serde"]
