[package]
name = "waymark-proto"
version.workspace = true
edition = "2024"

[package.metadata.cargo-shear]
ignored = ["prost", "serde"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = ["client", "server", "serde"]

client = ["tonic/transport"]
server = ["tonic/transport"]
serde = ["dep:serde"]
