[package]
name = "waymark-proto"
version.workspace = true
publish.workspace = true
edition = "2024"

[package.metadata.cargo-shear]
ignored = ["prost", "serde"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = ["client", "server", "serde"]

client = ["tonic/transport"]
server = ["tonic/transport"]
serde = ["dep:serde"]

[lib]
test = false
doctest = false
