[package]
name = "waymark-runloop"
edition = "2024"
version.workspace = true
publish.workspace = true

[dependencies]
waymark-backends-core = { workspace = true }
waymark-core-backend = { workspace = true }
waymark-dag = { workspace = true }
waymark-dag-builder = { workspace = true }
waymark-ids = { workspace = true }
waymark-nonzero-duration = { workspace = true }
waymark-observability = { workspace = true }
waymark-proto = { workspace = true }
waymark-runner = { workspace = true }
waymark-runner-executor-core = { workspace = true }
waymark-synthetic-exception = { workspace = true }
waymark-tick-loop = { workspace = true }
waymark-timed-channel = { workspace = true }
waymark-utils-tokio-channel = { workspace = true }
waymark-worker-core = { workspace = true }
waymark-workflow-registry-backend = { workspace = true }

chrono = { workspace = true, default-features = false }
nonempty-collections = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
waymark-backend-fault-injection = { workspace = true }
waymark-backend-memory = { workspace = true }
waymark-ir-parser = { workspace = true }
waymark-runner-state = { workspace = true }
waymark-worker-inline = { workspace = true }

mockall = { workspace = true }
nonempty-collections = { workspace = true }
sha2 = { workspace = true }

[lib]
doctest = false
