[package]
name = "waymark-runner-eval-core"
edition = "2024"
version.workspace = true
publish.workspace = true

[dependencies]
waymark-ir-conversions = { workspace = true }
waymark-proto = { workspace = true }
waymark-runner-expr = { workspace = true }

serde_json = { workspace = true }
thiserror = { workspace = true }
